--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -16,37 +16,103 @@
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-|1|1|2024 01 21| [캐논](https://recruit.lotte.co.kr/apply/announcement) |대| 개발직 인턴 | ❌📤 서류탈락 |||
+|1|1|2024 01 21| [캐논](https://recruit.lotte.co.kr/apply/announcement) |대| 개발직 인턴 | ❌📤 서류탈락 |롯데는 이제 안 쓸려고 한다. 아에 하나를 안 붙여주네.||
 |2|2|2024 01 25|[KB라이프파트너스](https://kblifepartners.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=168063) |대|ERP 개발자, 데이터 관리|❌📤 서류탈락|||
-|3|3|2024 01 28|[메리츠화재](https://recruit.meritzfire.com/noticeView.rc) |대|채용형 인턴 IT개발, 2지망 IT인프라|❌📤 서류탈락|||
+|3|3|2024 01 28|[메리츠화재](https://recruit.meritzfire.com/noticeView.rc) |대|채용형 인턴 IT개발, 2지망 IT인프라|❌📤 서류탈락|모르겠다. 나이? 영어나 학교? 나 보다 스펙 좋은 사람들이 많았나 보지||
 |4|4|2024 01 29|[해태제과식품](https://recruit.ht.co.kr/notification/view.aspx?EMP_NO=00438) |중견|IT 개발 인턴|❌📤 서류탈락|자소서 100자~150자 부터 ㅈ같았다.||
 |5|5|2024 03 12|[메트라이프](https://brand.metlife.co.kr/ep/hack/methack4job.do#about) |대|해커톤 대회|📤 서류제출|||
-||6|2024 01 29| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp)|중견|SW연구개발|❌ 미지원|||
-||7|2024 01 30|[하나투어](https://www.jobkorea.co.kr/Recruit/GI_Read/43460311?Oem_Code=C1) |중견|3년차 JAVA개발자 |❌ 미지원|||
-||8|2024 01 31|[컴퓨존](https://www.jobkorea.co.kr/Recruit/GI_Read/43820265?Oem_Code=C1) |중견|2년차 PHP웹개발|❌ 미지원|||
-||9|2024 02 07|[KCC](https://recruit.kccworld.co.kr/recruit/recruitMain.do?SiteType=A) |중견|JAVA 개발자|❌ 미지원|토익 필수||
-||10|2024 02 02|[NH선물](http://ir.futures.co.kr/recruit/noticeList.do?bbsType=RNEW) ||IT[인프라]|❌ 미지원|날짜 착각||
-||11|2024 02 06|[티머니](https://tmoney.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169275) |중견|개발|📤 서류제출|||
-||12|2024 02 08|[한국부동산원](https://reb.incruit.com/hire/viewhire.asp?projectid=101) |공|일반 전산|📤 서류제출|||
+|-|6|2024 01 29| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp)|중견|SW연구개발|❌ 미지원|||
+|-|7|2024 01 30|[하나투어](https://www.jobkorea.co.kr/Recruit/GI_Read/43460311?Oem_Code=C1) |중견|3년차 JAVA개발자 |❌ 미지원|||
+|-|8|2024 01 31|[컴퓨존](https://www.jobkorea.co.kr/Recruit/GI_Read/43820265?Oem_Code=C1) |중견|2년차 PHP웹개발|❌ 미지원|||
+|-|9|2024 02 07|[KCC](https://recruit.kccworld.co.kr/recruit/recruitMain.do?SiteType=A) |중견|JAVA 개발자|❌ 미지원|토익 필수||
+|-|10|2024 02 02|[NH선물](http://ir.futures.co.kr/recruit/noticeList.do?bbsType=RNEW) ||IT[인프라]|❌ 미지원|날짜 착각||
+|6|11|2024 02 06|[티머니](https://tmoney.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169275) |중견|개발|❌📤 서류탈락|학력? 영어성적?||
+|7|12|2024 02 08|[한국부동산원](https://reb.incruit.com/hire/viewhire.asp?projectid=101) |공|일반 전산|❌📤 서류탈락|||
+|-|13|2024 02 12| [엠로](https://emro.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169591&recruitKindCode=BASIC)|중견|기업용 솔루션 개발|❌ 미지원|게으름||
+|-|14|2024 02 13| [신용회복위원회](https://ccrs.career.co.kr/jobs/jobs_view.asp?ID=1001) |공|전산 개발|❌ 미지원|게으름||
+|8|15|2024 02 16|[한국음악저작권협회](https://www.komca.or.kr/service2/service_130301_info.jsp#) |공|전산관리 ERP|❌📤 서류탈락|모르겠다. 진심이다.||
+|-|16|2024 02 18|[현대트랜시스](https://hyundai-transys.recruiter.co.kr/career/jobs/12765) ||시트 전장품질(애매함)|❌ 미지원|||
+|9|17|2024 02 18|[SL](https://slworld.recruiter.co.kr/app/applicant/jobnotice/popupNoticeList/?applicantActionCode=SHOW_NOTICE) |중견|관리부분 IT(web), 경남 근무|❌🤖 AI역량검사 미응시|AI영어 면접과 PT면접을 두 번 보고 사전과제를 또 봐야한다. 이후에는 면접 2회, 합숙 면접? 있단다. 참 어려운 회사다.||
+|-|18|2024 02 18|[LS ITC](https://lsitc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170694) |대|IT/클라우드 인턴|❌ 미지원|게으름||
+|10|19|2024 02 19|[리딩투자증권](https://www.kofia.or.kr/brd/m_96/view.do?seq=28238&srchFr=&srchTo=&srchWord=&srchTp=&multi_itm_seq=0&itm_seq_1=0&itm_seq_2=0&company_cd=&company_nm=&page=1) ||IT개발(웹) |❌📤 서류탈락|||
+|-|20|2024 02 22|[오케이몰](https://www.okmall.com/company/recruit) ||시스템 개발팀 웹 개발자 경력 3년|❌ 미지원|전략기획팀이 있긴 한데,오바다.||
+|11|21|2024 02 21|[웅진](https://woongjinit-recruiter.career.greetinghr.com/o/101060) |중견||❌📤 서류탈락|포트폴리오 제출이 있던데 그거 안해서 그런가?||
+|12|22|2024 02 26|[하나금융티아이](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170506) |대|IT금융|❌📤 서류탈락|||
+|-|23|2024 02 27|[캐롯손해보험](https://career.carrotins.com/o/100854) ||data scientist 인턴|❌ 미지원|||
+|-|24|2024 02 29|[천재교육](https://www.jobkorea.co.kr/Recruit/GI_Read/43723654?Oem_Code=C1&sc=15) |중견|JAVA|❌ 미지원|||
+|-|25|2024 03 11|[하나은행]() |대|디지털ICT|❌ 미지원|하나금융티아이랑 중복 지원 불가||
+|-|26|2024 03 03|[매일경제TV](https://recruit.mbn.co.kr/pages/recruit_view.php?recruit_seq_no=214&page=1) |중견|웹개발자|❌ 미지원|게으름||
+|-|27|상시|[야놀자](https://careers.yanolja.co/o/101304) |중견|1년 계약직, 원격근무 가능|❌ 미지원|||
+|-|28|2024 03 04|[뱅크코어글로벌](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44015204?Oem_Code=C1&productType=TopClass&logpath=0) |중견|JAVA|❌ 미지원|||
+|13|29|2024 03 07|[로지스올시스템즈](https://recruit.logisall.com/regview?rn=MTAwODE3) ||물류정보시스템 개발|📤 서류제출|||
+|14|30|2024 03 08|[페이레터](https://www.jobkorea.co.kr/Recruit/GI_Read/43726204?Oem_Code=C1&sc=15) |중소|웹개발(결제시스템)|📤 서류제출|||
+|15|31|2024 03 10|[에이비엘생명보험](https://abl.recruiter.co.kr/career/home) |대기업|IT|📤 서류제출|||
+|16|32|2024 03 10|[데상트코리아](https://descentekorea.recruiter.co.kr/appsite/company/index) |중견|이커머스|📤 서류제출|||
+|17|33|2024 03 10|[여신금융협회](https://www.crefia.or.kr/portal/news/recruit/recruitGuide.xx) |공|정규직(IT)|📤 서류제출|||
+|-|34|2024 03 10|[웹케시그룹](https://www.saramin.co.kr/zf_user/jobs/relay/view?isMypage=no&rec_idx=47640451&recommend_ids=eJxdkMkRAzEIBKPxHxjOtwNR%2FlmY0tpi18%2FWqOZAA25supL5FW8NBznLKpI%2FXLofDA7Y%2BW5FHDGYnLihGIqOWee031ElwhSNsVGF4fQoAn4UufBbBErFU0S9rGZGq6x0vC1b8EGJ6lUTlUYxaiWJHEQfQPimIndQ%2FEZkbucPgHRH3g%3D%3D&view_type=search&searchword=%EC%9B%B9%EC%BC%80%EC%8B%9C&searchType=search&gz=1&t_ref_content=generic&t_ref=search&relayNonce=fc2ac6a0a21254014493&paid_fl=n&search_uuid=1ec2584d-52e6-40fd-901c-647b2b2d980e&immediately_apply_layer_open=n#seq=0) ||웹캐시부문 jex|❌ 미지원|||
+|-|35|2024 03 10| [지학사](https://www.jihak.co.kr/company/recruit_list.asp)||디지털콘텐츠팀 프론트엔드개발자(포트폴리오 제출 필수)|❌ 미지원|||
+|-|36|2024 03 10|[파수](https://recruit.fasoo.com/apply/242) |중견|프론트엔드 채용연계형 인턴||❌ 미지원||
 
 
+
+
+# 11일 2개
+|||2024 03 13|[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직||||
+|||2024 03 13|[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|IT||||
+|||2024 03 17|[우리에프아이에스](https://woorifis.careerlink.kr/) |대|IT개발/운영||||
+
+# 12일 2개
+|||2024 03 16|[보험개발원](https://www.kidi.or.kr/user/nd59072.do) |공|IT업무||||
+|||2024 03 17|[LIG넥스원](https://lignex1-2024.com/?utm_source=jasoseol&utm_medium=cpc&utm_campaign=cpc) |중견|||||
+|||2024 03 17|[라이나생명보험](https://linakorea.career.greetinghr.com/) ||보험 데이터분석||||
+
+# 13일 2개
+|||2024 03 22|[미래에셋증권]() ||어플리케이션(웹플랫폼)|||| 
+|||2024 03 18|[아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp) ||IT 웹시스템||||
+
+
+# 14일 2개
+|||2023 03 18|[네이버](https://recruit.navercorp.com/micro/teamnaver/2024) ||||||
+|||2024 03 18|[한국표준협회](https://ksa.recruitlab.co.kr/) ||사내 IT 시스템 기획 및 운영||||
+
+# 15일 2개
+|||2024 03 18|[소프트웨어공제조합](https://www.ksfc.or.kr/ksfch610.do) |공|전산직||||
+|||2024 03 18|[삼성생명]() |대|금융IT, 오픽IL||||
+|||2024 03 18|[삼성증권]() |대|IT||||
+|||2024 03 18|[삼성화재해상보험]() |대|IT||||
+|||2024 03 19|[PTKOREA](https://ptkorea.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173816) ||대기업 APP운영||||
+
+# 17일 2개
+|||2024 03 19|[엔지니어링공제조합](https://www.egic.co.kr/e/hp/recruit/recruitIntro.do) ||IT||||
+
+|||2024 03 24|[한화시스템](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=12565) |대|인프라구축/운영 or 서비스개발/운영||||
+|||2024 03 24|[천재교육]() ||미디어부문 개발1팀HTML콘텐츠개발자||||
+|||2024 03 31|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21239530?compcd=30007)|대|재무시스템 운영[백화점IS팀 ]||||
+
+|||2024 03 31|[교보문고](https://ehr.kyobobook.co.kr/recr/recruit_info_2.jsp) ||||||
+|||2024 04 12|[한국피앤지](https://www.pgcareers.com/apac/en/search-results?keywords=%22(P%26G%20Summer%20Internship)%22) |중견|IT||||
+||||[삼성생명](https://samsunglife-recruit.com/) ||채용설명회||||
+
+
+
+# 상시
 |||상시|[넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230283&currentPage=0) |대|프론트엔드 UI||||
 |||상시|[토스뱅크](https://toss.im/career/job-detail?job_id=4071101003) |중견|프로트엔드||||
 |||상시|[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
+|||상시|[아마존웹서비스](https://amazon.jobs/en/jobs/2549983/cloud-support-associate-ireland) ||Cloud Support Associate (Ireland 아일랜드 근무)||||
+|||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|3D App Back-End 연구원||||
 
-|||2024 02 12| [엠로](https://emro.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169591&recruitKindCode=BASIC)|중견|기업용 솔루션 개발||||
-|||2024 02 13| [신용회복위원회](https://ccrs.career.co.kr/jobs/jobs_view.asp?ID=1001) |공|전산 개발||||
 
 
-|||2024 02 18|[현대트랜시스](https://hyundai-transys.recruiter.co.kr/career/jobs/12765) ||시트 전장품질(애매함)||||
 
-|||2024 02 16|[한국음악저작권협회](https://www.komca.or.kr/service2/service_130301_info.jsp#) ||전산관리 ERP||||
-|||2024 02 18|[LS ITC](https://lsitc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170694) ||IT/클라우드 인턴||||
-|||2024 02 19|[리딩투자증권](https://www.kofia.or.kr/brd/m_96/view.do?seq=28238&srchFr=&srchTo=&srchWord=&srchTp=&multi_itm_seq=0&itm_seq_1=0&itm_seq_2=0&company_cd=&company_nm=&page=1) ||IT개발(웹) ||||
-|||2024 02 18|[SL](https://slworld.recruiter.co.kr/app/applicant/jobnotice/popupNoticeList/?applicantActionCode=SHOW_NOTICE) ||IT||||
 
-|||2024 02 22|[오케이몰](https://www.okmall.com/company/recruit) ||시스템 개발팀 웹 개발자 경력 3년||||
-|||2024 02 27|[캐롯손해보험](https://career.carrotins.com/o/100854) ||data scientist 인턴||||
+
+
+
+||||[건설산업정보원](http://www.kcinet.or.kr/) ||||||
+
+
+
 
 |||| ||||||
 |||| ||||||
