--- a/_posts/Resume/recent/2024-01-21-4차자기소개서.md
+++ b/_posts/Resume/recent/2024-01-21-4차자기소개서.md
@@ -13,16 +13,19 @@
 햄버거집 아르바이트를 하면서 나이가 있으신 분들은 키오스크 사용을 어려워 하신다는 점을 발견했습니다. 시대에 변화에 따라 신기술 도입도 중요하지만 사회 분위기에 맞는 기술의 변화가 필요하다고 생각합니다. 현재 고령화 문제는 심각하고, 실제로 저희 아버지는 와이파이 연결도 어려워 하십니다.
 이러한 일상 속에서 느꼈던 경험을 개발에 반영하여, IT 분야를 선도하는 ________에서 고령화 같은 사회적 문제에 기여하고자 지원하였습니다.
 
-입사 후 꿈꾸는 모습은 변화의 주역입니다. 새로운 기술 도입이나 업무 프로세스 개선을 주도하여, 회사가 보다 빠르게 변화하는 시장 환경에 적응할 수 있도록 팀원들과 소통하여 문제를 해결해 나가고 싶습니다. 특히, 인공지능과 머신러닝을 활용한 데이터 분석 역량을 꾸준한 공부를 통해 갖추어 고객의 필요를 미리 파악하고 이를 개발에 반영하면서, ________과 같이 성장하는 것을 목표로 하고 있습니다.
+입사 후 꿈꾸는 모습은 변화의 주역입니다. 새로운 기술 도입이나 업무 프로세스 개선을 주도하여, 회사가 보다 빠르게 변화하는 시장 환경에 적응할 수 있도록 팀원들과 소통하여 문제를 해결해 나가고 싶습니다. 특히, 머신러닝을 활용한 데이터 분석 역량을 꾸준한 공부를 통해 갖추어 고객의 필요를 미리 파악하고 이를 개발에 반영하면서, ________과 같이 성장하는 것을 목표로 하고 있습니다.
 
+### 서브
+제가 직장을 선택하는 기준은 계속된 노력으로 새로운 시장을 개척하는 추진력을 가진 한국부동산원 같은 기업입니다. 이 회사는 웹에서 UX를 적극 사용한다 느꼈으며, 부동산 시장의 투명성을 높이기 위해 최신 웹 기술 또한 적극적으로 활용하였다는 점을 발견했습니다. 이런 첨단기술을 실제 서비스에 통합하고, 실시간 데이터를 활용하여 사용자에게 가치있는 정보를 제공하는 과정에서 성장할 수 있는 기회가 많다고 느꼈습니다. 
+부동산 중개 서비스의 미래를 형성하는데 일조하고 싶습니다. 또한, 이 회사의 강점과 기회를 활용하고 약점과 위협을 극복하는 과정에서 개발자로서의 전문성을 키워 동시에 회사의 성장에 기여하고싶습니다.
 
 ## 성장과정 및 가치관
-- 416
+- 
 [기회는 책임감에서]
-어렸을 때, 은행에서 종사하신 아버지가 가정을 책임지기 위해 열심히 일하시는 모습 지켜보았습니다. 이런 보살핌 덕분에 스스로 점진적으로 목표를 세워 변화를 주게 되었습니다.
-우선 대학교에서 근로로 참여해 책임감을 가지고 일에 임하였습니다. 주변 교직원분들의 추천으로 수업 도우미로서 참여할 수 있게 되었고, 이후에는 수업의 질을 올리기 위해 최선을 다한 결과 교수님을 만족시킬 수 있었습니다. 그리고 교수님의 추천으로 국비지원과 자격증에 대한 정보를 통하여 스스로를 성장시킬 수 있었습니다.
+어릴 때, 아버지가 가정을 책임지기 위해 일하시는 모습을 지켜보며, 성인이 된 이후에는 이런 보살핌에 보답하고자 스스로 점진적으로 목표를 세워 변화를 주게 되었습니다.
+우선 대학교에서 근로로 참여해 책임감을 가지고 일에 임하였습니다. 주변 교직원분들의 추천으로 수업 도우미로서 참여할 수 있게 되었고, 이후에는 수업의 질을 올리기 위해 최선을 다한 결과 교수님을 만족시킬 수 있었습니다. 그 과정에서 교수님과 진로 방향에 대한 많은 이야기를 했으며, 그 정보를 통해 국비지원 교육과 자격증으로 스스로를 성장시킬 수 있었습니다.
 
-지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다. 이러한 가치관을 통하여 ________에서 책임감을 가지고 일에 임하여 더 많은 기회를 얻고 싶습니다.
+지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다. 이러한 가치관을 통해 ___회사___에서 책임감을 가지고 일에 임하여 더 많은 기회를 얻고 싶습니다.
 
 
 ## 21년도에 사용했던 가치관
@@ -46,6 +49,16 @@
 이 후에 다양한 개발 역량을 기르고자 데이터 분석과 관련한 자격증(ADsP,빅데이터분석기사)을 공부하였습니다. 이러한 저의 성격과 사회에서 얻은 지식을 바탕으로 ________에서 제 경험을 재해석하여 개발에 반영하고싶습니다.
 
 
+## 21년도에 사용했던 성격 및 장/단점
+- ❌❌
+- 715
+[군대 및 학교 생활을 하면서 생겨진 3가지 주관이 있습니다.] 
+첫 번째로는 시간 관리를 철저히 하면서 업무 진행을 통하여 맡은 업무에 있어 정해진 기한 내에 마무리 지을 수 있도록 하였습니다. 두 번째로는 군대 동기들보다 일찍 기상하여 일과를 시작하기 전 막사 내 인원파악 및 내부 정리를 먼저 한 후 업무를 수행하기 시작하였습니다. 이에 따라 동기 및 선임들이 ‘ 성실하다 ’ 라는 얘기를 많이 하였습니다. 마지막으로 조교 생활을 하면서 20년도에서 부족했던 점을 보안하여 학생들 본인이 모르는 내용에 대한 질문 시 의도를 파악하고 보다 정확한 답변을 하면서 작년 대비 수업 만족도가 10% 올라간 것을 확인하였습니다. 또한 교수님과 의견이 상이한 경우에 얘기하는 내용의 주된 내용을 파악하여 업무 처리방향을 고려하여 진행하였습니다. 
+
+[출발하기 위해 위대해질 필요는 없지만, 위대해지려면 출발해야 한다.]
+저에게는 사람들 앞에만 서면 말을 더듬는 습관이 트라우마로 있었습니다. 이 문제를 해결하기 위해 세바시나 많은 해외 강연, 그리고 자기 개발서를 읽어봤습니다. 그 과정에서 레스브라운의 연설을 봤습니다. 레스브라운은 선천적 지적 장애를 가지고 있었지만, 꿈이 있었습니다. 무엇보다도 그 사람의 태도가 레스브라운이라는 사람, 본인을 바꿀 수 있었던 계기가 되었습니다. 문제에 대면했을 때 회피하기보다는 해결하려는 태도로 임하는 것이 중요한 것을 깨닫게 하는 연설이었습니다.
+
+
 ## 지원 분야에 대한 직업 윤리
 - 619
 [성매매 알선 사이트]
@@ -58,12 +71,14 @@
 근데 안 합니다. 우리가 못 만들어서가 아니라 너무 당연해서 설명할 필요가 없다고 생각합니다. 사회가 지금 같이 어렵다면 더 많은 사람이 그 유혹을 못 참을 거라 생각하고 안타깝습니다.
 
 
+
+
 ## 자신을 어필할 수 있는 내용(도전?)
 - 642
 [애자일, 고객이 있어야 기업이 있습니다.]
 예전에 햄버거집 아르바이트에서 고객응대를 했었는데, 주로 나이가 있으신 분들은 키오스크 사용을 어려워 한다는 점을 발견했습니다. 그 점을 고려허여, 지난 회사에서 개발에 반영한 경험이 있습니다.
 
-지방세 자동계산 중 재산세(세율특례) 관련해서, 행안부가 제공한 계산식은 '표준세율->특례세율' 적용 시, 계산되는 식에서 '특례세율->특례세율' 적용되었을 때도 계산될 수 있도록 해야 한다는 기존 방법에서 식을 추가하여 한 화면에 모든 내용이 보이게 한다는 고객사의 요청이 있었습니다. 실제로 스스로 앱을 설치알 수 있는 실버층 비중이 18%인 점과 주 이용자의 연령을 고려하였습니다. 요청과 별개로 햇갈릴 거 같아 레이아웃을 분할하였고, 효율적인 정보전달을 위해, 전년도 세율을 우선적으로 선택해서 화면에 보일 수 있게 직관적으로 UI를, Javascript를 이용하여 기능을 개선된 화면을 하나 더 만들었습니다. PM님에게 재 의견과 그 부분을 보여준 결과, 개발에 반영되었습니다. 
+지방세 자동계산 중 재산세(세율특례) 관련해서, 행안부가 제공한 계산식은 '표준세율->특례세율' 적용 시, 계산되는 식에서 '특례세율->특례세율' 적용되었을 때도 계산될 수 있도록 해야 한다는 기존 방법에서 식을 추가하여 한 화면에 모든 내용이 보이게 한다는 고객사의 요청이 있었습니다. 실제로 스스로 앱을 설치알 수 있는 실버층 비중이 18%인 점과 주 이용자의 연령을 고려하였습니다. 요청과 별개로 햇갈릴 거 같아 레이아웃을 분할하였고, 효율적인 정보전달을 위해, 전년도 세율을 우선적으로 선택해서 화면에 보일 수 있게 직관적으로 UI를, Javascript를 이용하여 기능 개선된 화면을 하나 더 만들었습니다. PM님에게 재 의견과 그 부분을 보여준 결과, 개발에 반영되었습니다. 
 
 결과적으로 사용자에게 미치는 부담을 줄여주는 기술적 해결책을 제공할 수 있었습니다. 고객이 있어야 기업이 있다고 생각합니다. 이용하는 고객에 맞춰 변화를 주고 그에 맞는 새로운 혁신도 가져와야 한다고 생각합니다.
 
@@ -85,7 +100,7 @@
 사용자가 입력한 주민등록번호로 시민 정보를 가지고 있는 API를 ESB 통해 연계하여, XML에 쿼리를 작성해서, 값을 받아오는 방식이었습니다. 이후에는 Drill Down 분석 방식을 통하여 시스템 구조를 파악하였고, 막히는 부분은 동료 개발자의 피드백을 적극 수용하였습니다. 
 주로 업무를 진행할 때, DB의 Table에서 데이터를 가져와 처리하여 프로젝트를 진행하게 되는데, 응답 시간을 줄이기 위해 쿼리를 통한 성능 최적화에 신경을 썼고, 촉박한 일정 속에 책임감을 가지고 API를 활용한 실명인증 기능을 개발하여, 보안이 없이 처리 되던 작업을 자동화하여 고객사의 만족도를 상승시킬 수 있었습니다.
 
-이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로써, 사용자 만족도에 기여하는게 제 현실적 강점이라고 생각합니다.
+이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로써, 사용자 만족도에 기여하는게 제 현실적 강점입니다.
 
 ## 개발 역량
 - 985
@@ -115,3 +130,9 @@ Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 
 지난 회사를 다니면서 얻었던, 개발할 때 중요하게 여기는 요소가 있습니다.
 지난 회사 같은 경우 소스코드를 수정하게 되면 업무 진행 프로세스 절차에 따라 진행이 되는데, 단위 테스트와 통합 테스트 이후에 시큐어 코딩 단계가 있었습니다. 거기에 주로 걸렸던 보안 이슈는 XSS입니다. 이 문제의 주된 원인은 선언하고 사용하지 않는 변수였습니다. 지방세 관련 공공기관이 그래도 돈을 다루는 부분이다 보니까 작은 논리적인 어떤 오류가 결국에는 사용자에게 피해를 끼칠 수 있습니다. 프로그램적 스킬도 중요하지만 좀 더 꼼꼼하게 볼 수 있어야 한다고 생각했고, 이러한 방식을 통하여 지난 회사에 기여했습니다.
 
+
+
+## 21년도에 사용했던 취미 및 특기
+- 156
+- ❌❌
+취미는 쇼핑몰 후기에 사람들이 옷을 입는 것을 관찰하는 것이고 특기는 그 사람처럼 생각하고 입어보는 것입니다. 이 옷을 어떤 의도를 가지고 입었는지 그 사람의 패턴을 분석해보고 또는 생각지도 못한 방법으로 활용하는지, 저라면 이렇게 했을 거 같다는 부분을 생각해 보는 것 입니다.
