--- a/_posts/Resume/recent/2024-02-08-한국부동산원.md
+++ b/_posts/Resume/recent/2024-02-08-한국부동산원.md
@@ -38,6 +38,12 @@
 - [한국의 부동산 시장 문제점과 해결방안은?](https://www.startuptoday.kr/news/articleView.html?idxno=40021)
 - [[GO-ESG]한국부동산원...4대 전략·12개 과제 확정](https://www.econovill.com/news/articleView.html?idxno=543142)
 
+## 가산점 학교 관련 과목 최대 10개
+자바 : 웹에서 사용하는 언어의 기초를 쌓을 수 있었음
+정보보안개론 : 보안의 기초를 쌓을 수 있었음
+
+이런 뉘양스
+
 ## 경력 및 경험기술서
 - 당담 업무
     지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수를 진행했으며, 아무래도 신입으로 들어갔다 보니, 법개정이 적은 항목을 담당했습니다.
@@ -45,7 +51,6 @@
     - Spring을 활용한 컴포넌트 기반 개발
     - HTML, CSS, JavaScript를 사용하여 사용자 경험 향상 및 웹 성능 최적화
     - SVN을 사용한 소스 코드 관리 및 협업
-- 프로젝트
 - 프로젝트
     - 지방세미리계산 자동차세(소유) UI 개편(기여도 100%)
     - 지방세미리계산 재산세(세율특례) 계산식 기능 개편(기여도 100%)
@@ -56,6 +61,7 @@
     - 레저세 안내 메세지 기능 개발(기여도 100%)
     - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원(기여도 40%)
     - 차세대 프로젝트 QA(기여도 20%)
+
 ## 우리 원에 입사 지원한 동기 및 입사 후 실천하고자 하는 목표는 무엇인지 구체적으로 서술해 주십시오. (500자 제한)
 - 동기, 입사 후 포부
 - 구체적으로
