--- a/_posts/Resume/recent/2024-01-11-24년이력서.md
+++ b/_posts/Resume/recent/2024-01-11-24년이력서.md
@@ -6,7 +6,7 @@
 
 <img src="/img/blogimg/Resume/green.jpeg" style="height:300px">
 
-김용록/金容綠/KIM YONGROK
+김용록/金容綠/KIM YONGROK/YongRok/Yong-Rok
 ===
 - [링키드인](https://www.linkedin.com/in/grokeen-b551a8283/)
 
@@ -31,12 +31,11 @@
             4. 업무 성과
                 - 2023.01.16~2023.01.30 레저세 안내 메세지 기능 개발(기여도 100%)
                 - 2022.12.21~2023.01.18 23년 법개정에 따른 주민세 사업소본 가산세 특례(면제) 기능 개편(기여도 20%)
+                - 차세대 프로젝트 QA
+                - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원(기여도 40%)
                 - 2022.08.08~2022.08.23 지방세미리계산 재산세(세율특례) 계산식 기능 개편(기여도 100%)
                 - 2022.07.25~2022.08.10 지방세외수입 실명인증 기능 개발(기여도 100%)
                 
-                
-                - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원(기여도 40%)
-                - 차세대 프로젝트 QA
 
             5. 퇴직사유 
             계약만료, SI와 공공기관 특성 상 책임감이 적고 변화가 느려, 12월 정규직 전환 거절 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
@@ -46,7 +45,7 @@
     - 2013.03.04 ~ 2016.02.03 동안고등학교
         - 입문계
 
-    - 2016.03.02 ~ 2022.02.18 한국공학대학교(한국산업기술대학교) 컴퓨터융합학과
+    - 2016.03.02 ~ 2022.02.18 한국공학대학교(한국산업기술대학교) 컴퓨터융합공학과
         - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러
             라즈베리파이
 
