--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -1,17 +1,10 @@
 
 
 
-
-
-
-2 14
-엠ㅡㅁ융서비스
-
-
-
-
-
 요즘에는 주말 아르바이트를 하고있다. [맥도날드 스케줄 신청](https://people.mcd.co.kr/main/login.do)을 매주 해야한다.
+
+9336
+
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
@@ -20,7 +13,7 @@
 |2|2|2024 01 25|[KB라이프파트너스](https://kblifepartners.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=168063) |대|ERP 개발자, 데이터 관리|❌📤 서류탈락|||
 |3|3|2024 01 28|[메리츠화재](https://recruit.meritzfire.com/noticeView.rc) |대|채용형 인턴 IT개발, 2지망 IT인프라|❌📤 서류탈락|모르겠다. 나이? 영어나 학교? 나 보다 스펙 좋은 사람들이 많았나 보지||
 |4|4|2024 01 29|[해태제과식품](https://recruit.ht.co.kr/notification/view.aspx?EMP_NO=00438) |중견|IT 개발 인턴|❌📤 서류탈락|자소서 100자~150자 부터 ㅈ같았다.||
-|5|5|2024 03 12|[메트라이프](https://brand.metlife.co.kr/ep/hack/methack4job.do#about) |대|해커톤 대회|📤 서류제출|||
+|5|5|2024 03 12|[메트라이프](https://brand.metlife.co.kr/ep/hack/methack4job.do#about) |대|해커톤 대회|❌📤 서류탈락|||
 |-|6|2024 01 29| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp)|중견|SW연구개발|❌ 미지원|||
 |-|7|2024 01 30|[하나투어](https://www.jobkorea.co.kr/Recruit/GI_Read/43460311?Oem_Code=C1) |중견|3년차 JAVA개발자 |❌ 미지원|||
 |-|8|2024 01 31|[컴퓨존](https://www.jobkorea.co.kr/Recruit/GI_Read/43820265?Oem_Code=C1) |중견|2년차 PHP웹개발|❌ 미지원|||
@@ -46,61 +39,87 @@
 |-|28|2024 03 04|[뱅크코어글로벌](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44015204?Oem_Code=C1&productType=TopClass&logpath=0) |중견|JAVA|❌ 미지원|||
 |13|29|2024 03 07|[로지스올시스템즈](https://recruit.logisall.com/regview?rn=MTAwODE3) ||물류정보시스템 개발|📤 서류제출|||
 |14|30|2024 03 08|[페이레터](https://www.jobkorea.co.kr/Recruit/GI_Read/43726204?Oem_Code=C1&sc=15) |중소|웹개발(결제시스템)|📤 서류제출|||
-|15|31|2024 03 10|[에이비엘생명보험](https://abl.recruiter.co.kr/career/home) |대기업|IT|📤 서류제출|||
-|16|32|2024 03 10|[데상트코리아](https://descentekorea.recruiter.co.kr/appsite/company/index) |중견|이커머스|📤 서류제출|||
-|17|33|2024 03 10|[여신금융협회](https://www.crefia.or.kr/portal/news/recruit/recruitGuide.xx) |공|정규직(IT)|📤 서류제출|||
+|15|31|2024 03 10|[에이비엘생명보험](https://abl.recruiter.co.kr/career/home) |대기업|IT|❌📤 서류탈락|||
+|16|32|2024 03 10|[데상트코리아](https://descentekorea.recruiter.co.kr/appsite/company/index) |중견|이커머스|❌📤 서류탈락|||
+|17|33|2024 03 10|[여신금융협회](https://www.crefia.or.kr/portal/news/recruit/recruitGuide.xx) |공|정규직(IT)|❌📤 서류탈락|||
 |-|34|2024 03 10|[웹케시그룹](https://www.saramin.co.kr/zf_user/jobs/relay/view?isMypage=no&rec_idx=47640451&recommend_ids=eJxdkMkRAzEIBKPxHxjOtwNR%2FlmY0tpi18%2FWqOZAA25supL5FW8NBznLKpI%2FXLofDA7Y%2BW5FHDGYnLihGIqOWee031ElwhSNsVGF4fQoAn4UufBbBErFU0S9rGZGq6x0vC1b8EGJ6lUTlUYxaiWJHEQfQPimIndQ%2FEZkbucPgHRH3g%3D%3D&view_type=search&searchword=%EC%9B%B9%EC%BC%80%EC%8B%9C&searchType=search&gz=1&t_ref_content=generic&t_ref=search&relayNonce=fc2ac6a0a21254014493&paid_fl=n&search_uuid=1ec2584d-52e6-40fd-901c-647b2b2d980e&immediately_apply_layer_open=n#seq=0) ||웹캐시부문 jex|❌ 미지원|||
 |-|35|2024 03 10| [지학사](https://www.jihak.co.kr/company/recruit_list.asp)||디지털콘텐츠팀 프론트엔드개발자(포트폴리오 제출 필수)|❌ 미지원|||
 |-|36|2024 03 10|[파수](https://recruit.fasoo.com/apply/242) |중견|프론트엔드 채용연계형 인턴||❌ 미지원||
+|-|37|2024 03 18|[삼성생명]() |대|금융IT, 오픽IL|❌ 미지원|영어성적||
+|-|38|2024 03 18|[삼성증권]() |대|IT|❌ 미지원|영어성적||
+|-|39|2024 03 18|[삼성화재해상보험]() |대|IT|❌ 미지원|영어성적||
+|18|40|2024 03 13|[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직|🗒️ NCS 필기 시험|||
+|19|41|2024 03 13|[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|신입-IT|❌🖥️ 코딩테스트 탈락|||
+|20|42|2024 03 17|[우리에프아이에스](https://woorifis.careerlink.kr/) |대|IT개발/운영|📤 서류제출|||
+|-|43|2024 03 17|[라이나생명보험](https://linakorea.career.greetinghr.com/) ||보험 데이터분석, 경력 1년|❌ 미지원|||
+|-|44|2024 03 18|[소프트웨어공제조합](https://www.ksfc.or.kr/ksfch610.do) |공|전산직|❌ 미지원|아 시발 어학성적 필수로 해놨네????? 다 적었는데 미친련이;;;; 공고에 안 적혀있는데,,,,||
+|-|45|2024 03 18|[한국표준협회](https://ksa.recruitlab.co.kr/) ||사내 IT 시스템 기획 및 운영|❌ 미지원|석사나 경력 5년||
+|-|46|2024 03 16|[보험개발원](https://www.kidi.or.kr/user/nd59072.do) |공|IT업무, 3년 이상 경력직|❌ 미지원|||
+|-|47|2024 03 18|[삼성SDS]() ||오픽 IL|❌ 미지원|영어성적||
+|-|48|2024 03 17|[LIG넥스원](https://lignex1-2024.com/?utm_source=jasoseol&utm_medium=cpc&utm_campaign=cpc) |중견||❌ 미지원|아 다 적었는데 내가 안일했다 이거는... 다 적고 안 냈다.|
+|21|49|2024 03 18|[아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp) ||IT 웹시스템, 경력1년|📤 서류제출|1분 오바해서 서류 제출하긴 했음||
+|-|50|2023 03 18|[네이버](https://recruit.navercorp.com/micro/teamnaver/2024) |||❌ 미지원|게으름||
+|-|51|2024 03 19|[엔지니어링공제조합](https://www.egic.co.kr/e/hp/recruit/recruitIntro.do) ||IT|❌ 미지원|게으름||
+|-|52|2024 03 18|[한국표준협회](https://ksa.recruitlab.co.kr/) |||❌ 미지원|||
+|-|53|2024 03 21|[건강보험심사평가원]() ||전산직|❌ 미지원|||
+|-|54|2024 03 21|[중소벤처기업진흥공단](https://kosmes.applyin.co.kr/jobs/12484) ||IT,빅데이터|❌ 미지원|||
+|-|55|2024 03 22|[미래에셋증권](https://recruit.securities.miraeasset.com/reMenuAction.do) ||어플리케이션(웹플랫폼)|❌ 미지원||| 
+|-|56|2024 03 22|[한국수출입은행](https://koreaexim.incruit.com/hire/viewhire.asp?projectid=108) |||❌ 미지원|||
+|-|57|2024 03 24|[한화시스템](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=12565) |대|인프라구축/운영 or 서비스개발/운영|❌ 미지원|||
+|-|58|2024 03 24|[천재교육]() ||미디어부문 개발1팀HTML콘텐츠개발자|❌ 미지원|||
+|-|59|2024 03 25|[효성](https://hyosung.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=175362) |||❌ 미지원|||
+|-|60|2024 03 25|[대원제약](https://daewonpharm.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=175073&utm_source=jasoseol&utm_campaign=2403deawon) ||진천공장, 지원기획(시스템운용)|❌ 미지원|||
+|-|61|2024 03 27|[IBK기업은행](https://ibk.incruit.com/hire/viewhire.asp?projectid=118) ||14시 , IT, 코딩테스트|❌ 미지원|||
+|-|62|2024 03 27|[KDB산업은행](https://kdb.incruit.com/hire/viewhire.asp?projectid=103) ||16시, 디지털IT ,필기시험|❌ 미지원|||
+|-|63|2024 03 27|[금융결제원](https://kftc.or.kr/kftc/main/EgovkftcHubMain.do) ||17시,전산직 |❌ 미지원|||
+|22|64|2024 03 27|[인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1025) ||18시, 정보총신/IT(일근/교대),기사이상소지|📤 서류제출||
+|-|65|2024 03 27|[AXA손해보험](https://axa.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=175387) ||24시 , 자사운용 시스템 관리|❌ 미지원|개발직이 아닌 거 같은데?||
+|-|66|2024 03 27|[조선비츠](https://apply.chosunbiz.com/notice-detail.html?noticeId=2) ||코틀린, 안드로이드|❌ 미지원|코틀린||
+|-|67|2024 03 27|[법무법인태평양](https://recruit.bkl.co.kr/announcement/noticeView.do?noticeNo=86) |||전산(보안,운영)|❌ 미지원||
+|23|68|2024 03 29|[한화손해보험](https://www.hanwhain.com/web/index.do) ||15시, IT 개발|📤 서류제출|||
+|24|69|2024 03 31, 상시|[코웨이](https://cowayhr.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=149171) ||it 1~3지망 프론트,백,데이터|📤 서류제출|||
+|-|70|2024 03 31|[휴네시온](https://hunesion.com/kor/recruit/content4?viewMode=view&ca=&sel_search=&txt_search=&page=1&idx=301) ||프론트엔드, 상시||||
+|-|71|2024 03 31|[세종공업](https://recruit.sjku.co.kr/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템 유지보수, 용인 근무||||
+|25|72|2024 03 31|[행복나래](https://happynarae.saramin.co.kr/apply_site/apply/view_resume) ||it|❌📤 서류탈락|||
+|-|73|2024 03 31|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21239530?compcd=30007)|대|재무시스템 운영[백화점IS팀 ]|❌ 미지원|||
+|-|74|2024 03 31|[용마로지스](https://yongmalogis.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=174517) |IT|정보전략,물류시스템 운영|❌ 미지원|||
+|-|75|2024 03 31|[교보문고](https://ehr.kyobobook.co.kr/recr/recruit_info_2.jsp) |||❌ 미지원|||
+|26|76|2024 05 15|[SKY Hospitality Group](https://www.jobkorea.co.kr/Recruit/GI_Read/44212318?Oem_Code=C1&logpath=1&stext=%ED%95%B4%EC%99%B8%EA%B7%BC%EB%AC%B4&listno=7) |외국계|소프트웨어 엔지니어|📤 서류제출|||
+|-|77|2024 04 01| [kink](https://company.kinx.net/career/#s05)||시스템엔지니어||||
+|-|78|2024 04 01|[디와이그룹](https://www.saramin.co.kr/zf_user/jobs/relay/pop-view?rec_idx=47824329&t_ref=main&t_ref_content=platinum_fix_expand) ||시스템엔지니어링|❌ 미지원|||
+|-|79|2024 03 29|[단군소프트](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44205983?Oem_Code=C1&productType=VVIP&logpath=0) ||데브옵스|서류제츨|||
+|27|80|2024 03 29|[코스트코코리아](https://www.catch.co.kr/NCS/RecruitInfoDetails/394657) |||❌📤 문의메일 전송 거절|||
+|28|81|2024 04 03|[농협정보시스템](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=66355) ||시스템엔지니어|📤 서류제출|||
 
+|||2024 04 04| [한국마사회]()||시스템 개발|❌ 미지원|||
+|||2024 04 07|[JB우리캐피탈](https://wooricap.saramin.co.kr/apply_site/recruit/view) ||IT 인프라|📤 서류제출|||
+|||2024 04 07|[더케이교직원나라]() |||❌ 미지원|||
+|||2024 04 08|[대한무역투자진흥공사](https://kotra.careerlink.kr/jobs/RC20240319003897) |||❌ 미지원|||
 
+----|||2024 04 08|[새마을금고중앙회](https://www.kfcc.co.kr/recruit/rec0095.do) ||||||
 
-
-# 11일 2개
-|||2024 03 13|[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직||||
-|||2024 03 13|[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|IT||||
-|||2024 03 17|[우리에프아이에스](https://woorifis.careerlink.kr/) |대|IT개발/운영||||
-
-# 12일 2개
-|||2024 03 16|[보험개발원](https://www.kidi.or.kr/user/nd59072.do) |공|IT업무||||
-|||2024 03 17|[LIG넥스원](https://lignex1-2024.com/?utm_source=jasoseol&utm_medium=cpc&utm_campaign=cpc) |중견|||||
-|||2024 03 17|[라이나생명보험](https://linakorea.career.greetinghr.com/) ||보험 데이터분석||||
-
-# 13일 2개
-|||2024 03 22|[미래에셋증권]() ||어플리케이션(웹플랫폼)|||| 
-|||2024 03 18|[아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp) ||IT 웹시스템||||
-
-
-# 14일 2개
-|||2023 03 18|[네이버](https://recruit.navercorp.com/micro/teamnaver/2024) ||||||
-|||2024 03 18|[한국표준협회](https://ksa.recruitlab.co.kr/) ||사내 IT 시스템 기획 및 운영||||
-
-# 15일 2개
-|||2024 03 18|[소프트웨어공제조합](https://www.ksfc.or.kr/ksfch610.do) |공|전산직||||
-|||2024 03 18|[삼성생명]() |대|금융IT, 오픽IL||||
-|||2024 03 18|[삼성증권]() |대|IT||||
-|||2024 03 18|[삼성화재해상보험]() |대|IT||||
-|||2024 03 19|[PTKOREA](https://ptkorea.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173816) ||대기업 APP운영||||
-
-# 17일 2개
-|||2024 03 19|[엔지니어링공제조합](https://www.egic.co.kr/e/hp/recruit/recruitIntro.do) ||IT||||
-
-|||2024 03 24|[한화시스템](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=12565) |대|인프라구축/운영 or 서비스개발/운영||||
-|||2024 03 24|[천재교육]() ||미디어부문 개발1팀HTML콘텐츠개발자||||
-|||2024 03 31|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21239530?compcd=30007)|대|재무시스템 운영[백화점IS팀 ]||||
-
-|||2024 03 31|[교보문고](https://ehr.kyobobook.co.kr/recr/recruit_info_2.jsp) ||||||
+|||2024 04 08|[한국무역보험공사]() ||it(전산학)||||
 |||2024 04 12|[한국피앤지](https://www.pgcareers.com/apac/en/search-results?keywords=%22(P%26G%20Summer%20Internship)%22) |중견|IT||||
-||||[삼성생명](https://samsunglife-recruit.com/) ||채용설명회||||
+
+----|||2024 04 14|[코오롱베니트](https://dream.kolon.com/RECRUIT_KOLON/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템개발(금융)||||
+|||2024 04 14|[안랩](https://ahnlab.recruiter.co.kr/appsite/company/index) ||||||
+
+----|||2024 04 15|[한화생명]() ||||||
+----|||2024 04 15| [현대캐피탈](https://hcs.recruiter.co.kr/career/jobs/17477)||||||
+|||2024 04 18|[인천관광공사]() ||7급 정보통신||||
+|||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) ||라눅스 인프라개발 및 운영 부문||||
+
 
 
 
 # 상시
+|||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|3D App Back-End 연구원||||
 |||상시|[넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230283&currentPage=0) |대|프론트엔드 UI||||
 |||상시|[토스뱅크](https://toss.im/career/job-detail?job_id=4071101003) |중견|프로트엔드||||
 |||상시|[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
 |||상시|[아마존웹서비스](https://amazon.jobs/en/jobs/2549983/cloud-support-associate-ireland) ||Cloud Support Associate (Ireland 아일랜드 근무)||||
-|||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|3D App Back-End 연구원||||
+|||상시|[티맥스티베로](https://tmaxcareers.ninehire.site/) ||웹서비스 프론트엔드 연구원||||
+|||상시|[야놀자](https://careers.yanolja.co/o/105535) ||소트웨어엔지니어, 채용연계형||||
 
 
 
@@ -108,12 +127,14 @@
 
 
 
-
-||||[건설산업정보원](http://www.kcinet.or.kr/) ||||||
-
-
-
-
+|||| [한국무역통신]()||||||
+|||| ||||||
+|||| ||||||
+|||| ||||||
+|||| ||||||
+|||| ||||||
+|||| ||||||
+|||| ||||||
 |||| ||||||
 |||| ||||||
 |||| ||||||
