--- a/_posts/Resume/recent/2024-01-21-4차자기소개서.md
+++ b/_posts/Resume/recent/2024-01-21-4차자기소개서.md
@@ -90,6 +90,12 @@
 대학교에서 근로학생으로 근무를 하던 중 한 교수님이 사물 인터넷 실습 수업 진행 시, 많은 학생들을 혼자 보지 못하여 도우미를 구하시고 계시다는 소식을 접했습니다. 관심이 생겨 도움을 주고자 수업 도우미로 참여하였습니다. 우선 학생들이 원하는 수업 방식을 가벼운 대화를 통해 니즈를 파악하였습니다. 학생 별로 ` 진도가 빠르다. ` 혹은 ` 느리다. ` 라며, 수업의 진도에 대한 불만이 많았습니다. 
 라즈베리파이의 GPIO를 실습하다 보면 많은 하드웨어(물리)적 문제가 발생합니다. 첫 번째로 ` 라즈베리파이4 정석 `, 책을 이용하여 센서에 대한 정보를 탐색하였습니다. 두 번째, 구글링을 통하여 센서의 사용 가능 유무를 직접 코딩하며 실험해, 동작하는 센서를 구분하였습니다. 과전류에 따른 브레드 보드 및 센서의 손상 문제에 대해 사전에 방지하였습니다. 마지막으로 진도 문제를 해결하기 위해 뒤처진 학생들을 맡았으며, 학생들의 수업 참여율을 높였습니다. 그리하여 시간은 절약되고, 수업의 질을 높일 수 있었습니다. 결과적으로 기말고사 후 전년 대비 수업 만족도 12% 증가한 것을 확인하였으며, 교수님의 만족도 충족시킬 수 있었습니다.
 
+- 2024 03 13
+- 594
+[수업에 조교로 참여하여, 수업 만족도 12% 증가]
+대학교에서 근로학생으로 근무하던 중 한 교수님이 사물 인터넷 실습 수업 진행 시, 학생들이 수업에 대한 불만으로 도우미를 구하시고 계시다는 소식을 접했습니다. 관심이 생겨 수업 도우미로 참여하였습니다. 우선 갈등의 중간 지점을 찾기위해 학생들과 원활한 커뮤니케이션을 통해 각자의 의견을 경청하고, 니즈를 파악하였더니, 학생 별로 ` 진도가 빠르다. ` 혹은 ` 느리다. ` 라며, 수업의 진도에 대한 불만이 많았습니다. 교수님과 공통된 목표를 찾아내는데 주력했습니다.
+라즈베리파이의 GPIO를 실습하면 하드웨어적 문제가 발생합니다. 첫 번째로 책을 이용하여 센서에 대한 정보를 탐색하였습니다. 그리고 구글링을 통하여 센서의 사용 가능 유무를 직접 코딩하며, 동작하는 센서를 구분해, 과전류에 따른 브레드보드 및 센서의 손상 문제를 사전에 방지하였습니다. 마지막으로 진도를 위해 뒤처진 학생들을 맡았으며, 학생들의 수업 참여율을 높여, 수업의 질을 높일 수 있었습니다. 결과적으로 서로 다른 의견을 조율하여, 기말고사 후 전년 대비 수업 만족도가 12% 증가한 것을 확인하면서 성공적으로 완료할 수 있었습니다.
+
 
 ## 지원분야와 관련한 본인의 보유 역량(고난과 역경)
 - 736
